See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.90.00

              pamundice: Add -listfile.

              pamundice: Add error and warning messages for insane file name
              pattern.

              pamcut: Improve error messages for legacy command line
              arguments.

              pamditherbw: Fix bug: issue error message instead of just
              ignoring one of the options when you specify -hilbert and
              another halftone option.

              pamdice: Fix junk output when -width or -height not specified.

              pamdice: Fix crash when -width or -height is zero.

              pamdice: Fix incorrect file names when -outstem contains "%s",
              etc.

              pgmnoise: Correct error messages for invalid height, width
              arguments.

              pnmquantall: remove accidentally published debugging trace.

              libnetpbm: pm_getline, xvminitoppm, pamtris : Fix bug: crash
              when reading empty line.

              libnetpbm: pm_read_unknown_size, rawtopgm, zeisstopnm: crash
              when out of memory

              Install: Use e.g. "10.90.00" for version in pkg-config and
              config file, intead of e.g. "Netpbm 10.90.00".

19.12.29 BJH  Release 10.89.00

              pnmpad: Add -reportonly.

              anytopnm: Fix unpredictable behavior when file name contains
              spaces.

              pamfind: Fix typo in message.

              pnmquant: Fail if user specifies both -spreadbrightness and
              -spreadluminosity or both -randomseed and -norandom, rather
              than just pick one.

              pamrubber: Fix bug: -frame doesn't work.  Always broken.
              (Pamrubber was new in Netpbm 10.54 (March 2011).

19.09.28 BJH  Release 10.88.00

              pnmquant: Fail if user specifies more than one of -meanpixel,